# ESP32-ethernet-sensor-node

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
.cache/clangd/index/: app_config.h.19849CFCC4509A98.idx  cJSON.c.5DD870372CB91589.idx  cJSON.h.6B11430B81CE93C2.idx  cJSON_Utils.c.090F76D1631E966F.idx  cJSON_Utils.h.874856C4C41D775D.idx  esp_eth_mac_w5500.c.DBC90477F2C97F94.idx  esp_eth_mac_w5500.h.6C241B006683B72F.idx  esp_eth_phy_w5500.c.7628DA63D5AD73C4.idx  esp_eth_phy_w5500.h.E3C081C03CECF61B.idx  main.c.86A5F28ADE41B7DF.idx  network.c.FBA8A67E6AD9F0E3.idx  network.h.8006CFFB2FBEB5B1.idx  s3.c.C3EFA8EFBC7904A1.idx  s3.h.8673DA54317EA8EB.idx  sensors.c.21DE1159D937D1B1.idx  w5500.h.77901690CDAEEBE4.idx
.github/workflows/: ci-build.yml  release-ota.yml
components/w5500/: idf_component.yml
main/: CMakeLists.txt  app_config.h  app_state.c  app_state.h  cert.pem  comms.c  eth01.c  eth01.h  http.c  http.h  idf_component.yml  main.c  manifest.c  network.c  nvs.c  nvs.h  ota.c  ota.h  periodic.c  periodic.h  peripherals.c  peripherals.h  rtos_objects.c  s3.c  s3.h  sensor_context.c  sensors.c
main/include/: app_config.h  comms.h  http.h  manifest.h  network.h  nvs.h  ota.h  periodic.h  peripherals.h  rtos_objects.h  s3.h  sensor_context.h  sensors.h
